# Domino

./: .gitignore  CMakeLists.txt  Dokumentacja wstepna.docx  Domino.cbp  README.md  Scan.cpp  Scan.h  ScanDef.h  Source.cpp  Source.h  main.cpp
src/: CMakeLists.txt  Domino  Parser.cpp  Parser.h  Rational.cpp  Rational.h  Scan.cpp  Scan.h  ScanDef.h  Scanner.cpp  Scanner.h  Scope.cpp  Scope.h  Source.cpp  Source.h  Synchronize.cpp  Synchronize.h  Token.cpp  Token.h  main.cpp  test0.tkom  test1.tkom  test2.tkom  test3.tkom  test4.tkom
src/ast/: Array.cpp  Array.h  Assignment.cpp  Assignment.h  Condition.cpp  Condition.h  ConditionalExpression.cpp  ConditionalExpression.h  ConditionalStatement.cpp  ConditionalStatement.h  Content.cpp  Content.h  Expression.cpp  Expression.h  Factor.cpp  Factor.h  ForStatement.h  Function.cpp  Function.h  IfStatement.h  MainFunction.cpp  MainFunction.h  ParametersDefinition.cpp  ParametersDefinition.h  Program.cpp  Program.h  SimpleExpression.cpp  SimpleExpression.h  Statement.cpp  Statement.h  Variable.cpp  Variable.h  VariableDeclaration.cpp  VariableDeclaration.h  WhileStatement.h  WriteInStatement.h
src/ast/Expression/: Condition.cpp  Condition.h  ConditionalExpression.cpp  ConditionalExpression.h  Expression.cpp  Expression.h  SimpleExpression.cpp  SimpleExpression.h
src/ast/Factor/: ExpressionFactor.cpp  ExpressionFactor.h  Factor.cpp  Factor.h  ValueFactor.cpp  ValueFactor.h
src/ast/Node/: ArrayNode.cpp  ArrayNode.h  BooleanNode.cpp  BooleanNode.h  CharNode.cpp  CharNode.h  FloatNode.cpp  FloatNode.h  IntNode.cpp  IntNode.h  Node.cpp  Node.h  RationalNode.cpp  RationalNode.h  StringNode.cpp  StringNode.h  Value.h  ValueTypeVisitor.cpp  ValueTypeVisitor.h  Variable.cpp  Variable.h
src/ast/Statements/: ArrayDeclaration.cpp  ArrayDeclaration.h  Assignment.cpp  Assignment.h  ConditionalStatement.cpp  ConditionalStatement.h  ForStatement.cpp  IfStatement.cpp  IfStatement.h  ReturnStatement.cpp  (+10 more)
src/resources/: test0.tkom  test1.tkom  test3.tkom  test4.tkom
tests/: CMakeLists.txt  TestParser.cpp  TestRational.cpp  TestScan.cpp  TestSource.cpp  interpreter_test.cbp  testsMain.cpp
tests/ast/: TestNode.cpp  TestParametersDefinition.cpp  TestVariable.cpp
tests/ast/Expressions/: TestExpressionFactor.cpp  TestExpressions.cpp  TestSimpleExpression.cpp  TestValueFactor.cpp
tests/ast/Statements/: TestAssignment.cpp
(+13 files in other folders)
